# aoc2022

./: README.md  aoc2022.cabal  flake.nix
aoc01/: Main.hs
aoc02/: Main.hs
aoc03/: Main.hs
aoc04/: Main.hs
aoc05/: Main.hs
aoc06/: Main.hs
aoc07/: Main.hs
aoc08/: Main.hs
aoc09/: Main.hs
aoc10/: Main.hs
aoc11/: Main.hs
aoc12/: Main.hs
aoc13/: Main.hs
aoc14/: Main.hs
aoc15/: Main.hs
aoc16/: Main.hs
aoc17/: Main.hs
aoc18/: Main.hs
aoc19/: Main.hs
aoc20/: Main.hs
aoc21/: Main.hs
aoc22/: Main.hs
aoc23/: Main.hs
aoc24/: Main.hs
aoc25/: Main.hs
inputs/: input-18.txt
lib/: Inputs.hs  TH.hs
